--- a/src/app/summary/components/summary-cards/summary-cards.component.html
+++ b/src/app/summary/components/summary-cards/summary-cards.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <i class="fa fa-check-square text-info"></i>
                 <h5 class="card-title">Confirmed</h5>
-                <p>300,000</p>
+                <p>{{summaryData?.TotalConfirmed | number}} </p>
             </div>
         </div>
 
@@ -16,7 +16,7 @@
             <div class="card-body">
                 <i class="fa fa-times text-danger"></i>
                 <h5 class="card-title">Deaths</h5>
-                <p>10,000</p>
+                <p>{{summaryData?.TotalDeaths | number}}</p>
             </div>
         </div>
         
@@ -29,7 +29,7 @@
             <div class="card-body">
                 <i class="fa fa-heart text-success"></i>
                 <h5 class="card-title">Recovered</h5>
-                <p>100,000</p>
+                <p>{{summaryData?.TotalRecovered | number}}</p>
             </div>
         </div>
         
