--- a/src/app/summary/components/summary-page/summary-page.component.html
+++ b/src/app/summary/components/summary-page/summary-page.component.html
@@ -1,1 +1,2 @@
-<app-summary-cards></app-summary-cards>
+<app-summary-cards [covidData]="covidData"></app-summary-cards>
+<app-top-countries *ngIf="covidData" [covidData]="covidData"></app-top-countries>
