--- a/src/app/country/components/data-table/data-table.component.html
+++ b/src/app/country/components/data-table/data-table.component.html
@@ -16,7 +16,7 @@
                 <td>{{ country?.Country}}</td>
                 <td>{{ country?.TotalConfirmed | number }}</td>
                 <td>{{ country?.TotalRecovered | number }}</td>
-                <td>{{ country?.TotlaDeaths | number }}</td>
+                <td>{{ country?.TotalDeaths | number }}</td>
             </tr>
 
             </tbody>
