--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -7,11 +7,13 @@
             type="text"
             class="form-control"
             placeholder="Search Country"
+            [(ngModel)]="searchTerm"
             />
 
             <button
             class="btn btn-outline-success"
             type="button"
+            (click)="search()"
 
             >Search</button>
         </div>
